# rag-ai-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: config.py  database.py
app/models/: db_models.py  schemas.py
app/services/: document_service.py  llm_service.py  rag_service.py  vector_service.py
app/utils/: response_payloads.py
